--- a/environment.yml
+++ b/environment.yml
@@ -13,5 +13,5 @@ dependencies:
   - utm
   - xarray
   - pip:
-    - git+https://github.com/uafgeotools/waveform_collection.git
+    - git+https://github.com/uafgeotools/waveform_collection.git@fix-bulk
     - --editable .
