--- a/environment.yml
+++ b/environment.yml
@@ -4,13 +4,12 @@ channels:
   - defaults
 dependencies:
   - cartopy
-  - gdal
   - ipython
   - jupyterlab
   - obspy
   - pip
-  - utm
-  - xarray
+#  - pygmt  # OPTIONAL
+  - rioxarray
   - pip:
     - git+https://github.com/uafgeotools/waveform_collection.git
     - --editable .
