--- a/environment.yml
+++ b/environment.yml
@@ -13,4 +13,5 @@ dependencies:
   - tqdm
   - pip:
     - git+https://github.com/uafgeotools/waveform_collection.git
+#    - git+https://github.com/liamtoney/infresnel.git  # OPTIONAL
     - --editable .
