--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,8 +5,11 @@ build:
   tools:
     python: "3.11"
 
+sphinx:
+  configuration: doc/conf.py
+
 python:
   install:
     - requirements: doc/requirements.txt
-    - method: setuptools
+    - method: pip
       path: .
